Add unit tests and fix bugs
Closes #31
Add unit test to:
-parser.py - git
-runner.py - git
-analyzer.py - loc
-models - package

Closes #45

Fixed the Author and Change object equality error.
Fixed warning (DeprecationWarning: invalid escape sequence \d) in parser.py,
with using raw string instead of unicode.

--- a/loc/known_types.json
+++ b/loc/known_types.json
@@ -63,5 +63,12 @@
   ".py": { "comments": [["#", "\n"]], "description": "Python source" },
   ".yml": { "comments": [["#", "\n"]], "description": "Yaml source" },
   ".md": { "comments": [], "description": "Markdown file" },
-  ".json": { "comments": [], "description": "Json file" }
+  ".json": { "comments": [], "description": "Json file" },
+  ".js": {
+      "comments": [
+	  ["//", "\n"],
+	  ["/*", "*/"]
+      ],
+      "description": "Json file"
+  } 
 }
