Ignore pycharm's and project specific paths
Results will go under ./results/ directory, ignoring it as a
"Project specific dicrecotry"

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,9 @@ cython_debug/
 # VS code folders
 .vs
 .vscode
+
+# Project specific directories
+results/
+
+# Pycharm configuration files
+.idea/*
