--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+atomicwrites==1.4.0
 attrs==20.3.0
+colorama==0.4.4
 iniconfig==1.1.1
 packaging==20.8
 pluggy==0.13.1
@@ -7,4 +9,6 @@ pyparsing==2.4.7
 pytest==6.2.1
 python-dateutil==2.8.1
 six==1.15.0
+tabulate==0.8.7
 toml==0.10.2
+yapf==0.30.0
