Add .yaml extension support, update ignore_dirs
-Add .yaml file extension support in the known_types.json file.
-Add .env, pycache folders into ignored directories.

Closes #65

--- a/loc/known_types.json
+++ b/loc/known_types.json
@@ -54,6 +54,11 @@
         "description": "Yaml source",
         "language": "Yaml"
     },
+    ".yaml": {
+        "comments": [["#", "\n"]],
+        "description": "Yaml source",
+        "language": "Yaml"
+    },
     ".md": {
         "comments": [],
         "description": "Markdown file",
