Separate plain text and source lines counting
Plain text lines were counted together with source lines, it was
affecting the final result.
This update delivers following:
 - if the extension is a source code or not is configurable and
set as a parameter is_source_code in known_types.json file.
 - text lines and source code lines are counted separately
 - line count percentage between different languages is present in
 final results. Note: this count omits empty lines, hence, if file
 contains 5 lines among which 3 are code lines, 1 comment and 2 are
 empty, it will count 4 lines.
 - percentage ratio between code and rest of the files, including the
 plain text + unknown files are still kept in total% column.

 Closes #80

--- a/loc/known_types.json
+++ b/loc/known_types.json
@@ -2,106 +2,127 @@
     ".c": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "C source",
+        "is_source_code": true,
         "language": "C"
     },
     ".h": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "C header",
+        "is_source_code": true,
         "language": "C"
     },
     ".cpp": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "C++ source",
+        "is_source_code": true,
         "language": "C++"
     },
     ".hpp": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "C++ header",
+        "is_source_code": true,
         "language": "C++"
     },
     ".cs": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "C# source",
+        "is_source_code": true,
         "language": "C#"
     },
     ".java": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "Java source",
+        "is_source_code": true,
         "language": "Java"
     },
     ".go": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "Golang source",
+        "is_source_code": true,
         "language": "Go"
     },
     ".s": {
         "comments": [["#", "\n"], ["//", "\n"], ["/*", "*/"]],
         "description": "Assembly source",
+        "is_source_code": true,
         "language": "Assembly"
     },
     ".asm": {
         "comments": [[";", "\n"]],
         "description": "Assembly source",
+        "is_source_code": true,
         "language": "Assembly"
     },
     ".py": {
         "comments": [["#", "\n"]],
         "description": "Python source",
+        "is_source_code": true,
         "language": "Python"
     },
     ".yml": {
         "comments": [["#", "\n"]],
         "description": "Yaml source",
+        "is_source_code": true,
         "language": "Yaml"
     },
     ".yaml": {
         "comments": [["#", "\n"]],
         "description": "Yaml source",
+        "is_source_code": true,
         "language": "Yaml"
     },
     ".md": {
         "comments": [],
         "description": "Markdown file",
+        "is_source_code": false,
         "language": "Markdown"
     },
     ".json": {
         "comments": [],
         "description": "Json file",
+        "is_source_code": false,
         "language": "JSON"
     },
     ".js": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "Javascript source",
+        "is_source_code": false,
         "language": "Javascript"
     },
     ".txt": {
         "comments": [],
         "description": "Text file",
+        "is_source_code": false,
         "language": "Plain text"
     },
     ".rst": {
         "comments": [],
         "description": "Restructured text file",
+        "is_source_code": false,
         "language": "Formatted text"
     },
     ".sh": {
         "comments": [["#", "\n"]],
         "description": "Shell script file",
+        "is_source_code": true,
         "language": "Shell script"
     },
     ".bb": {
         "comments": [["#", "\n"]],
         "description": "Bitbake file",
+        "is_source_code": true,
         "language": "Bitbake"
     },
     ".bbclass": {
         "comments": [["#", "\n"]],
         "description": "Bitbake class",
+        "is_source_code": true,
         "language": "Bitbake"
     },
     ".bbappend": {
         "comments": [["#", "\n"]],
         "description": "Bitbake append file",
+        "is_source_code": true,
         "language": "Bitbake"
     }
 }
