Fix failing tests
Fix those failing tests that were affected after last changes.

Closes #96

--- a/config/known_types.json
+++ b/config/known_types.json
@@ -86,7 +86,7 @@
     ".js": {
         "comments": [["//", "\n"], ["/*", "*/"]],
         "description": "Javascript source",
-        "is_source_code": false,
+        "is_source_code": true,
         "language": "Javascript"
     },
     ".txt": {
